styles.css
/* These are the parent divs */

body {
  margin: 0;
  padding: 0;
  font-family: "Roboto";
}

.container {
  display: flex;
  flex-direction: column;
}

/* This is the header */

.header {
  display: flex;
  flex: 1;
  align-items: center;
  justify-content: space-around;
  background-color: #1F2937;
  color: #F9FAFB;
  font-size: 24px;
  font-weight: bold;
}

ul {
  display: flex;
  list-style: none;
  gap: 20px;
  color: #E5E7EB;
  font-size: 18px;
  font-weight: normal;
}

/* This is the hero */

.hero {
  display: flex;
  flex: 1;
  align-items: center;
  justify-content: center;
  gap: 125px;
  background-color: #1F2937;
}

.hero-text {
  max-width: 550px;
  max-height: 250px;
}

h1 {
    color: #F9FAFB;
    font-size: 48px;
    font-weight: bold;
}

p {
  font-size: 18px;
  font-weight: normal;
  color: #E5E7EB;
}

button {
  background-color: #3882F6;
  color: #F9FAFB;
  font-size: 18px;
  font-weight: bold;
  padding: 10px 30px;
  border-radius: 10px;
}

img, .hero-image {
  width: 550px;
  height: 250px;
  object-fit: cover;
  object-position: 50% 70%;
}

